--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvas-painter",
+  "name": "@avolutions/canvas-painter",
   "version": "0.1.0",
   "description": "A simple yet powerful library for drawing basic shapes (rectangles, circles, etc.) on HTML5 Canvas with ease. Perfect for creating 2D graphics in JavaScript projects.",
   "module": "dist/index.js",
