--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "typedoc": "^0.26.7",
     "typescript": "^5.6.2"
   }
 }
