--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   ],
   "scripts": {
     "build": "tsc",
+    "docs": "typedoc",
+    "lint": "eslint",
     "test:coverage": "jest --coverage",
     "test": "jest"
   },
@@ -24,10 +26,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.26.7",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0"
   }
 }
