--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.26.7",
+    "typedoc-plugin-markdown": "^4.2.7",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
   }
