--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "docs": "typedoc",
+    "docs": "typedoc && doctoc docs --notitle --maxlevel 3",
     "lint": "eslint",
     "test:coverage": "jest --coverage",
     "test": "jest"
@@ -28,11 +28,13 @@
     "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
+    "doctoc": "^2.2.1",
     "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.26.7",
+    "typedoc-plugin-markdown": "^4.2.7",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
   }
