--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "docs": "typedoc && doctoc docs --notitle --maxlevel 3",
+    "docs": "typedoc",
     "lint": "eslint",
     "test:coverage": "jest --coverage",
     "test": "jest"
@@ -28,7 +28,6 @@
     "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "doctoc": "^2.2.1",
     "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
