--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -34,4 +34,5 @@ jobs:
       run: npm run deploy
       working-directory: ./website
       env:
-        USE_SSH: true
+        GIT_USER: ${{ secrets.GITHUB_ACTOR }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
