--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -34,4 +34,4 @@ jobs:
       run: npm run deploy
       working-directory: ./website
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        USE_SSH: true
