--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -8,6 +8,10 @@ on:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+  
     runs-on: ubuntu-latest
 
     steps:
@@ -30,10 +34,12 @@ jobs:
       run: npm run build
       working-directory: ./website
 
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: './website/build'
+
     - name: Deploy to GitHub Pages
-      run: npm run deploy
-      working-directory: ./website
-      env:
-        GIT_USER: ${{ secrets.GITHUB_ACTOR }}  # GitHub user triggering the action
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
-        GIT_REMOTE_URL: https://github.com/avolutions/canvas-painter.git
+      id: deployment
+      uses: actions/deploy-pages@v4
+
