--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,6 +14,11 @@ jobs:
   
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -25,6 +30,9 @@ jobs:
 
     - name: Change directory to Docusaurus folder
       run: cd website
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
 
     - name: Install dependencies
       run: npm install
