--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "@avolutions/canvas-painter",
   "version": "0.1.0",
   "description": "CanvasPainter.js is a simple yet powerful JavaScript library for drawing basic shapes (rectangles, circles, etc.) on HTML5 Canvas with ease. Perfect for creating 2D graphics in your web projects.",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js"
+    }
+  },
   "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build:cjs": "tsc --project tsconfig.cjs.json && node scripts/generate-cjs-package.js",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm",
+    "clean": "rimraf ./dist",
     "docs": "typedoc",
     "lint": "eslint",
     "test:coverage": "jest --coverage",
@@ -31,6 +41,7 @@
     "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.26.7",
     "typedoc-plugin-markdown": "^4.2.7",
