--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -2,16 +2,14 @@ name: Deploy Docusaurus site
 
 on:
   push:
-    branches:
-      - docs
-  workflow_dispatch:
+    branches: "main"
 
 jobs:
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-  
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -50,4 +48,3 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
-
