Set width and height of canvas from html or css as fallback

--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
   },
   "homepage": "https://avolutions.github.io/canvas-painter/",
   "keywords": [
-    "javascript", "drawing", "typescript", "canvas", "shapes", "html5-canvas"
+    "javascript",
+    "drawing",
+    "typescript",
+    "canvas",
+    "shapes",
+    "html5-canvas"
   ],
   "author": "Alexander Vogt <alexander.vogt@avolutions.de>",
   "license": "MIT",
