Add eslint fix run config

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean": "rimraf ./dist",
     "docs": "typedoc",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test:coverage": "jest --coverage",
     "test": "jest"
   },
