--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^8.5.0",
     "eslint": "^9.10.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-tsdoc": "^0.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rimraf": "^6.0.1",
