--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -17,7 +17,7 @@ jobs:
         fetch-depth: 0
     - name: Install dependencies
       run: npm install
-    - name: Run tests
+    - name: Create coverage report
       run: npm run test:coverage
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
