Add main branch as targer to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 sonar.organization=avolutions
 sonar.projectKey=avolutions_canvas-painter
+sonar.exclusions=tests/**, website/**
+sonar.branch.target=main
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
