Add temp branch name to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.organization=avolutions
 sonar.projectKey=avolutions_canvas-painter
 sonar.exclusions=tests/**, website/**
-sonar.branch.target=main
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.branch.target=main
+sonar.branch.name=27-add-coverage-report-to-sonarcloud
