--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@avolutions/canvas-painter": "^0.4.0",
     "@docusaurus/core": "3.5.2",
     "@docusaurus/plugin-content-docs": "^3.5.2",
     "@docusaurus/preset-classic": "3.5.2",
