--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "eslint": "^9.10.0",
+    "eslint": "9.14.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-tsdoc": "^0.3.0",
     "jest": "^29.7.0",
